--- a/Samitex/app/src/main/res/values/strings.xml
+++ b/Samitex/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Samitex</string>
+    <string-array name="Spinner">
+        <item>Tanggal</item>
+        <item>Mesin</item>
+    </string-array>
 </resources>
